--- a/css/index.css
+++ b/css/index.css
@@ -3,48 +3,137 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
+    color: rgb(225, 239, 230);
+    background-color: rgb(0, 4, 17);
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 * {
@@ -63,7 +152,15 @@ body {
     line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, i {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+i {
     text-decoration: none;
 }
 
@@ -79,18 +176,63 @@ h3 {
     font-size: 5rem;
 }
 
-p, a {
+p,
+a {
     font-size: 3rem;
 }
 
 /* header section */
 header {
+
     width: 100%;
     height: 100vh;
-    background-image: url('../img/home-header.jpg');
+
+    background-image: url(/img/home-header.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+
+}
+
+header div {
+    display: flex;
+
+    width: 100%;
+    height: 30%;
+    flex-direction: column;
+
+    background-color: rgb(0, 4, 17, .8);
+}
+
+header div h1 {
+    text-align: center;
+    
+
+}
+header div h1 a{
+    color: rgb(225, 239, 230);
+}
+
+.nav-up {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.nav-up a {
+    color: rgb(225, 239, 230);
+    margin-top: 3rem;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.social-media i {
+    margin: 3rem 3rem;
 }
 
 /* spacers */
@@ -99,6 +241,7 @@ header {
     height: 20vh;
     background-color: rgb(0, 4, 17);
 }
+
 .spacer-sm {
     width: 100%;
     height: 10vh;
@@ -107,10 +250,23 @@ header {
 
 /* gallery section */
 .gallery {
+    display: flex;
     width: 100%;
     height: 100vh;
     text-align: center;
     background-color: rgb(0, 4, 17);
+    flex-wrap: wrap;
+
+}
+
+.gallery h2 {
+    margin: auto auto;
+}
+
+.gallery img {
+    margin: 1.4%;
+
+    align-items: center;
 }
 
 /* about us section */
@@ -122,6 +278,7 @@ header {
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    align-items: center;
 }
 
 .about-container {
@@ -157,6 +314,7 @@ header {
     background-color: rgb(0, 4, 17, .8);
 }
 
+
 .contact h2 {
     padding-top: 5vh;
 }
@@ -190,55 +348,143 @@ header {
 
 /* footer section */
 footer {
+    display: flex;
     width: 100%;
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    justify-content: space-around;
+}
+
+footer h3 {
+    margin-left: 3rem;
+}
+form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 2rem;
+    justify-content: flex-start;
+}
+
+input[type="email"] {
+    width: 20rem;
+    height: 3.5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+}
+
+button[type="submit"] {
+    width: 10rem;
+    height: 3.5rem;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1.6rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    margin-top: 0rem;
+}
+
+
+.footer-nav {
+    width: 69%;
+}
+
+.nav-down {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.nav-down a {
+    color: rgb(225, 239, 230);
+
+}
+
+.footer-nav p {
+    font-size: large;
+    margin: 5% 0% 5% 60%;
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
+
     /* header section */
-    
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header h1 {
+        font-size: 3rem;
+    }
+
+    .nav-up {
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .nav-up a {
+        color: rgb(225, 239, 230);
+        margin-top: 1rem;
+        font-size: x-large;
+    }
+
+    .social-media {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .social-media i {
+
+        margin: 2rem 0.1rem;
+    }
+
+
 
     /* gallery section */
     .gallery {
         height: auto;
     }
-    
+
     /* about us section */
 
     .about {
         height: 200vh;
     }
-    
+
     .about h2 {
         width: 100%;
         padding-top: 5vh;
     }
-    
+
     .about-container .text {
         width: 85%;
     }
-    
+
     /* contact us section */
     .contact h3 {
         padding-top: 2.5vh;
     }
-    
+
     .info {
         flex-wrap: wrap;
     }
-    
+
     .address {
         width: 100%;
         padding-bottom: 2.5vh;
     }
-    
+
     .hours {
         width: 100%;
     }
-    
+
     .contacts {
         width: 100%;
         padding-bottom: 2.5vh;
@@ -246,8 +492,54 @@ footer {
 
     /* footer section */
     footer {
+        display: flex;
+        flex-direction: column;
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+    }
+
+    footer h3 {
+        display: flex;
+        font-size: 2.5rem;
+        justify-content: center;
+        margin: 0;
+
+    }
+
+    .footer-nav {
+        width: 100%;
+    }
+
+    .nav-down {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .nav-down a {
+        color: rgb(225, 239, 230);
+
+    }
+
+    .footer-nav p {
+        font-size: medium;
+        margin: 0.5rem auto;
+        text-align: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    input[type="email"] {
+        width: 35rem;
+    }
+
+    button[type="submit"] {
+        width: 35rem;
+        margin-top: -6rem;
     }
 }
