--- a/css/menu.css
+++ b/css/menu.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    color: rgb(225, 239, 230);
 }
 ol, ul {
 	list-style: none;
@@ -55,11 +56,13 @@ html {
     max-width: 1920px;
     min-width: 428px;
     font-size: 62.5%;
+    width: 100%;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+    background-color: rgb(0, 4, 17);
 }
 
 h1, h2, h3, h4, h5, h6, p, a, i {
@@ -96,6 +99,42 @@ header {
     background-repeat: no-repeat;
 }
 
+header div {
+    display: flex;
+    width: 100%;
+    height: 30%;
+    flex-direction: column;
+    background-color: rgb(0, 4, 17, .8);
+}
+
+header div h1 {
+    text-align: center;   
+}
+header div h1 a{
+    color: rgb(225, 239, 230);
+}
+
+.nav-up {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.nav-up a {
+    color: rgb(225, 239, 230);
+    margin-top: 3rem;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.social-media i {
+    margin: 3rem 3rem;
+}
+
 /* spacer */
 .spacer {
     width: 100%;
@@ -119,15 +158,98 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
+.menu h2{
+    text-align: center;
+    background-color: rgb(0, 4, 17, .8);
+}
+.yemekler-icecekler{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: rgb(0, 4, 17, .8);
+}
+.yemekler-icecekler-topic{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    padding: 0%;
+}
+.yemekler-icecekler-topic h3{
+    text-align: center;
+}
+.content1{
+    display: flex;    
+    justify-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.content1 div{
+    width: 30%;
+}
+#still1{
+    font-size:medium;
+}
 
 /* footer section */
 footer {
+    display: flex;
     width: 100%;
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    justify-content: space-around;
 }
 
+footer h3 {
+    margin-left: 3rem;
+}
+form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 2rem;
+    justify-content: flex-start;
+}
+
+input[type="email"] {
+    width: 20rem;
+    height: 3.5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+}
+
+button[type="submit"] {
+    width: 10rem;
+    height: 3.5rem;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1.6rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    margin-top: 0rem;
+}
+
+
+.footer-nav {
+    width: 69%;
+}
+
+.nav-down {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.nav-down a {
+    color: rgb(225, 239, 230);
+
+}
+
+.footer-nav p {
+    font-size: large;
+    margin: 5% 0% 5% 60%;
+}
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
@@ -137,16 +259,147 @@ footer {
         text-align: center;
         font-size: 4rem;
     }
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header h1 {
+        font-size: 3rem;
+    }
+
+    .nav-up {
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .nav-up a {
+        color: rgb(225, 239, 230);
+        margin-top: 1rem;
+        font-size: x-large;
+    }
+
+    .social-media {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .social-media i {
+
+        margin: 2rem 0.1rem;
+    }
 
     /* menu */
     .menu {
         background-image: none;
+        
     }
+    .menu h2{
+        color: black;
+        background-color: rgb(225, 239, 230);
+        
+
+    }
+    .yemekler-icecekler{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(225, 239, 230);
+        width: 100%;   
+    }
+    .yemekler-icecekler-topic{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 0%;
+    }
+    
+    .yemekler-icecekler-topic h3{
+        text-align: center;
+        font-size: 4rem;
+        border: solid black;
+        color: black;
+        width: 100%;
+    
+
+    }
+    .content1{
+        display: flex; 
+        flex-direction: column; 
+        justify-content: center;        
+        align-items: center;
+        color: black;
+        
+        border-bottom: solid black;
+        
+    }
+    .content1 div{
+        width: 26rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .content1 p {
+        text-align: center;
+    }
+
+
 
     /* footer section */
     footer {
+        display: flex;
+        flex-direction: column;
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+    }
+
+    footer h3 {
+        display: flex;
+        font-size: 2.5rem;
+        justify-content: center;
+        margin: 0;
+
+    }
+
+    .footer-nav {
+        width: 100%;
+    }
+
+    .nav-down {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .nav-down a {
+        color: rgb(225, 239, 230);
+
+    }
+
+    .footer-nav p {
+        font-size: medium;
+        margin: 0.5rem auto;
+        text-align: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    input[type="email"] {
+        width: 35rem;
+    }
+
+    button[type="submit"] {
+        width: 35rem;
+        margin-top: -6rem;
     }
 }
