--- a/css/index.css
+++ b/css/index.css
@@ -201,7 +201,6 @@ header div {
     width: 100%;
     height: 30%;
     flex-direction: column;
-
     background-color: rgb(0, 4, 17, .8);
 }
 
@@ -233,6 +232,7 @@ header div h1 a{
 
 .social-media i {
     margin: 3rem 3rem;
+    font-size: 3rem;
 }
 
 /* spacers */
